src/test/resources/syntactic/tests/correct/TC_OK_BASIC_PROGRAM.ru
/? CORRECTO: ANALISIS SINTACTICO
struct Prueba{
    
}

impl Prueba{
    .(){
        ;
    }
}

start{
}